--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  A gestão de resíduos é um dos maiores desafios enfrentados pelas sociedades modernas, principalmente devido ao aumento populacional, ao crescimento das cidades e à maior geração de lixo. O desperdício, quando não é tratado adequadamente, pode causar sérios danos ao meio ambiente, à saúde pública e ao bem-estar das futuras gerações. Para gerenciar esse problema de forma eficiente, é fundamental entender que o lixo pode ser classificado de diversas maneiras, com base em sua origem, composição e destinação final. Neste texto, exploraremos os principais tipos de lixo, suas características e a importância de um manejo adequado.</p>
 
 <p>
-1. Lixo Orgânico
+<h3>1. Lixo Orgânico</h3>
 O lixo orgânico é composto por materiais de origem biológica que podem ser decompostos por microorganismos. Esse tipo de resíduo é geralmente gerado a partir de restos de alimentos, como cascas de frutas, sementes, vegetais e outros resíduos orgânicos de cozinha. Também estão incluídos nesse grupo os resíduos de jardinagem, como folhas secas, grama cortada e galhos.</p>
 
 
@@ -22,7 +22,7 @@ O lixo orgânico é, em grande parte, biodegradável, ou seja, pode ser transfor
 Além disso, os resíduos orgânicos têm um impacto significativo na redução do volume de lixo em aterros sanitários. Em muitos locais, as autoridades locais incentivam a compostagem doméstica como uma alternativa sustentável. Para aqueles que têm acesso a sistemas de compostagem comunitários ou industriais, a reciclagem dos resíduos orgânicos é uma ótima forma de promover a economia circular, onde os recursos são constantemente reutilizados.
 
 <p>
-2. Lixo Reciclável
+<h3>2. Lixo Reciclável</h3>
 Os resíduos recicláveis são materiais que podem ser reutilizados ou transformados em novos produtos. O lixo reciclável é composto por itens como papel, vidro, plástico e metal. Esses materiais são de grande importância, pois sua reciclagem ajuda a reduzir o impacto ambiental causado pela extração de recursos naturais e pela produção de novos produtos. A reciclagem também economiza energia e contribui para a redução da poluição.</p>
 
 
@@ -41,7 +41,7 @@ Metal: Latas de alumínio, latas de aço e outros metais podem ser reciclados co
 É importante destacar que, para garantir a eficácia da reciclagem, os materiais recicláveis devem estar limpos e secos, para evitar a contaminação e facilitar o processo de reprocessamento.
 
 <p>
-3. Lixo Não Reciclável
+<h3>3. Lixo Não Reciclável</h3>
 O lixo não reciclável, também conhecido como rejeito, é composto por materiais que não podem ser reciclados ou que não têm viabilidade de reciclagem no momento. Exemplos incluem produtos sujos ou misturados com outras substâncias, como papéis plastificados, fraldas descartáveis, espumas e isopor, entre outros. Este tipo de resíduo é muitas vezes composto por materiais de difícil decomposição e pode permanecer por centenas de anos no meio ambiente.</p>
 
 
@@ -51,7 +51,7 @@ Esse tipo de lixo é destinado, na maioria das vezes, para aterros sanitários, 
 A conscientização sobre a redução do lixo não reciclável é vital para diminuir a pressão sobre os aterros sanitários, que muitas vezes estão próximos de atingir sua capacidade máxima. Por isso, é importante que os consumidores busquem alternativas de produtos com menos embalagem ou com embalagens recicláveis, além de investirem em hábitos mais sustentáveis.
 
 <p>
-4. Lixo Tóxico
+<h3>4. Lixo Tóxico</h3>
 Os resíduos tóxicos são materiais que podem causar danos à saúde humana ou ao meio ambiente. São compostos por substâncias químicas perigosas, como solventes, pesticidas, tintas, baterias, lâmpadas fluorescentes e medicamentos vencidos. A disposição inadequada desses materiais pode gerar contaminação do solo, das águas e até do ar, causando riscos graves para os seres vivos.</p>
 
 
@@ -61,7 +61,7 @@ A gestão desses resíduos exige cuidados especiais. Muitas vezes, é necessári
 Além disso, muitas substâncias presentes no lixo tóxico podem ser recuperadas e reutilizadas, o que torna a reciclagem desses materiais uma estratégia importante para a preservação dos recursos naturais e para a redução da poluição. Exemplos disso são a reciclagem de pilhas e baterias, que pode recuperar metais valiosos, e a destinação correta de produtos químicos industriais.
 
 <p>
-5. Lixo Eletrônico (E-lixo)
+<h3>5. Lixo Eletrônico (E-lixo)</h3>
 O lixo eletrônico é composto por equipamentos e dispositivos eletrônicos descartados, como computadores, celulares, televisores, pilhas e baterias. Esses itens, quando descartados de maneira inadequada, podem liberar substâncias perigosas, como chumbo, mercúrio e cadmio, que são altamente tóxicas para a saúde humana e para o meio ambiente.</p>
 
 
@@ -72,20 +72,20 @@ A conscientização sobre o descarte correto de lixo eletrônico é fundament
 al, pois muitos consumidores ainda descartam esses itens de forma incorreta, levando-os para lixões ou misturando-os com lixo comum. Alguns países já implementaram legislações rigorosas para a gestão de e-lixo, e muitos centros de coleta oferecem alternativas convenientes e gratuitas para o descarte desses resíduos.
 
 <p>
-6. Lixo Hospitalar
+<h3>6. Lixo Hospitalar</h3>
 O lixo hospitalar é gerado por unidades de saúde, como hospitais, clínicas e laboratórios. Ele é composto por materiais que podem representar risco à saúde pública, como seringas, agulhas, curativos, medicamentos vencidos e resíduos orgânicos provenientes de procedimentos médicos. Esse tipo de lixo, em sua grande maioria, é potencialmente perigoso devido ao risco de contaminação por patógenos.</p>
 
 
 Esse tipo de lixo deve ser tratado com extremo cuidado e, na maioria dos casos, precisa ser encaminhado para unidades de tratamento especiais. O descarte inadequado de lixo hospitalar pode propagar doenças e causar contaminação do ambiente, além de oferecer risco à saúde dos trabalhadores envolvidos na gestão dos resíduos e da população em geral.<
 
 <p>
-7. Lixo de Construção e Demolição
+<h3>7. Lixo de Construção e Demolição</h3>
 Os resíduos de construção e demolição (RCD) são gerados durante a obra de construção, reforma ou demolição de edifícios. Esse tipo de lixo pode ser composto por materiais como madeira, concreto, tijolos, metais, cerâmica, vidro e plásticos. Muitos desses materiais podem ser reciclados ou reutilizados de diversas formas, como a britagem de concreto para pavimentação ou a recuperação de metais para reutilização na construção.</p>
 
 
 A destinação adequada dos RCD é crucial para evitar a sobrecarga dos aterros sanitários, além de reduzir a extração de novos recursos naturais. A reciclagem dos resíduos de construção contribui para a sustentabilidade no setor da construção civil, e várias cidades têm adotado práticas de "construção sustentável", incentivando o reaproveitamento de materiais.
 <P>
-Conclusão
+<h3>Conclusão</h3>
 A classificação e a gestão adequada dos resíduos sólidos são fundamentais para a preservação do meio ambiente e para o bem-estar da sociedade. A separação correta do lixo em categorias como orgânico,</p>
 
 </body>
